--- a/src/sass/partials/_market.scss
+++ b/src/sass/partials/_market.scss
@@ -12,7 +12,7 @@
     max-height: 150vw;
     padding-bottom: 20px;
     transition: max-height 1s linear;
-    overflow: hidden;
+    overflow: scroll;
 
     @include mq(mobileLandscape) {
         margin-left: -20px;
