--- a/src/sass/partials/_shop.scss
+++ b/src/sass/partials/_shop.scss
@@ -45,7 +45,7 @@
     z-index: 10;
     transition: opacity 0.3s linear, transform 0.3s linear;
     transform: scale(.9);
-    margin-bottom: -8px;
+    margin-bottom: 0;
     width: 100%;
 
     &:focus {
